--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   ],
   "author": "its-VSP",
   "name": "@moibitjs/core",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "The Core module of moibitjs to interact with MoiBit off-chain Storage platform",
   "main": "./src/sdk.js",
   "scripts": {
@@ -21,12 +21,12 @@
   "license": "",
   "devDependencies": {
     "jasmine": "^2.6.0",
-    "path": "^0.12.7",
-    "dotenv": "^8.1.0",
-    "form-data": "^2.5.1"
+    "dotenv": "^8.1.0"
   },
   "dependencies": {
-    "axios": "^0.19.0"
+    "axios": "^0.19.0",
+    "path": "^0.12.7",
+    "form-data": "^2.5.1"
   },
   "publishConfig": {
     "access": "public"
